<resources>
    <string name="app_name">Matify</string>
    <string name="tap_on_some_place_in_expression">⬆ Tap on some place in expression ⬆</string>
    <string name="end_expression_opened"><b><i>Goal:</i></b> %1$s</string>
    <string name="previous" translatable="false">↪️</string>
    <string name="restart" translatable="false">🔄</string>
    <string name="back" translatable="false">⬅️</string>
    <string name="wrong_subs">❌ Can\'t do this ❌</string>
    <string name="time_out">😢Time out!😢</string>
    <string name="no_rules">🙅 No rules for this 🙅</string>
    <string name="levels">LEVELS</string>
    <string name="gear" translatable="false">⚙️</string>
    <string name="magnifying_glass" translatable="false">🔍</string>
    <string name="settings">⚙️ SETTINGS ⚙️</string>
    <string name="rate_us">⭐ Rate us</string>
    <string name="version_view" translatable="false">Matify v</string>
    <string name="pointer" translatable="false">☝</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="continue_with_google">Sign in with Google</string>
    <string name="continue_with_github">Continue with GitHub</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="googlelogo" translatable="false">googleLogo</string>
    <string name="githublogo" translatable="false">githubLogo</string>
    <string name="saved">Saved!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">sign up</string>
    <string name="or">OR</string>
    <string name="account">ACCOUNT</string>
    <string name="name">Name</string>
    <string name="full_name">Full name</string>
    <string name="additional">Additional</string>
    <string name="additional_auth_info">Show additional info</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="different_password">Different passwords</string>
    <string name="wrong_password">Wrong password</string>
    <string name="big_password">PASSWORD</string>
    <string name="old_password">Old password</string>
    <string name="ok">ok</string>
    <string name="games">MY GAMES</string>
    <string name="games_from_cloud">☁ global games ☁</string>
    <string name="search_for_a_game">Search for a game!</string>
    <string name="edit_account">✏ Edit account</string>
    <string name="change_theme">🌗 Change theme</string>
    <string name="change_theme_to">Change theme to</string>
    <string name="change_password">🔑 Change password</string>
    <string name="change_language">🌍 Change language</string>
    <string name="change_language_to">Change language to</string>
    <string name="big_sign_up">SIGN UP</string>
    <string name="cancel">Cancel</string>
    <string name="no">No 🚫</string>
    <string name="yes">Yes ✅</string>
    <string name="congratulations">Congratulations!</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="restart_label">Restart</string>
    <string name="next_after_last_level_label">Sorry, that`s the last level 😀 \n Try another game</string>
    <string name="you_finished_level_with">You finished level with:</string>
    <string name="steps">Steps</string>
    <string name="time">Time</string>
    <string name="award">AWARD</string>
    <string name="hi">Hi</string>
    <string name="send">Send</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_action_will_reset_all_your_achievements">This action will reset all your achievements</string>
    <string name="i" translatable="false">ℹ️</string>
    <string name="start_multiselect" translatable="false">≡</string>
    <string name="end_multiselect" translatable="false">≢</string>
    <string name="msg_on_start_multiselect">The multiselection mode. To cancel, press ≢</string>
    <string name="start_multiselect_info">Start the multiselection mode</string>
    <string name="end_multiselect_info">Exit from the multiselection mode</string>
    <string name="previous_info">Previous step</string>
    <string name="previous_multiselect_info">Cancel the last selection</string>
    <string name="restart_info">Restart</string>
    <string name="i_info">About level</string>
    <string name="back_info">Back to levels</string>
    <string name="save_your_current_state">Save your current state?</string>
    <string name="welkome_back">Welcome back!</string>
    <string name="continue_from_where_you_stopped">Continue from where you stopped?</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_chapters">Tutorial chapters</string>
    <string name="tutorial_chapter_finished">Chapter finished</string>
    <string name="tutorial_navigation">Navigation</string>
    <string name="tutorial_how_to_play">How to play</string>
    <string name="tutorial_multiselect">Multiselect</string>
    <string name="tutorial_level">Tutorial Level</string>
    <string name="tutorial_game">Tutorial Game</string>
    <string name="start_tutorial">❔ Start tutorial</string>
    <string name="wanna_leave">Wanna leave?</string>
    <string name="wanna_see_tutorial">Wanna see tutorial?</string>
    <string name="restart_tutorial">Restart tutorial?</string>
    <string name="attention">❗ Attention ❗</string>
    <string name="leave">Leave</string>
    <string name="step_back">Step back</string>
    <string name="got_it">🙃 Got it? 🙃</string>
    <string name="yep">Yep 😎</string>
    <string name="a_good_choice">👏 A good choice! 👏</string>
    <string name="no_rules_try_another">No rules for this place 😅 \n Try another one!</string>
    <string name="welcome">🍀 Welcome! 🍀</string>
    <string name="games_activity_tutorial">🍀 Welcome! 🍀\nHere you can:\n* Search local and global games\n* Choose one and play!\n\n🙃 Got it? 🙃</string>
    <string name="level_activity_tutorial">And here you can choose level to play!\n\n🙃 Got it? 🙃</string>
    <string name="tutorial_on_level_info">🍀 Welcome to level! 🍀\nThat\'s a place for short\nimportant (and funny) messages</string>
    <string name="tutorial_on_level_to_menu">← This can return to menu… ←\nAnd even save 💾 your progress!</string>
    <string name="tutorial_on_level_short_info">i Tap to see short\ninfo about level i</string>
    <string name="tutorial_on_level_restart">↺ Restart level button ↺</string>
    <string name="tutorial_on_level_undo">↶ Undo the last transformation ↶</string>
    <string name="tutorial_on_level_goal">⬆ Goal: transform expression to it ⬆</string>
    <string name="tutorial_on_level_goal_explanation">This is final goal for level💥\nAKA The result criteria for current task!\n\n</string>
    <string name="tutorial_on_level_goal_toggle">P.S. You can toggle it with 🔽 if you need!\n\n🙃 Got it? 🙃</string>
    <string name="tutorial_on_level_main_element">⬇ Main element of our game 🥁 ⬇</string>
    <string name="tutorial_on_level_main_element_current">Here is current expression, to win - transform it to goal.\n</string>
    <string name="tutorial_on_level_main_element_to_win">To win 🏆 you need:\n</string>
    <string name="tutorial_on_level_main_element_touch">1. Touch 🖕 on expression\n</string>
    <string name="tutorial_on_level_main_element_find_rule">2. Find 🔎 necessary rule\n</string>
    <string name="tutorial_on_level_main_element_make_subst">3. Touch chosen rule ~> make substitution\n</string>
    <string name="tutorial_on_level_main_element_repeat">4. Repeat until you win 👏🏆\n</string>
    <string name="tutorial_on_level_tap">👉 Let\'s check it out! 👈\n1. Tap near plus in the expression 👇</string>
    <string name="tutorial_on_level_select">1. Tap near plus in the expression ✅\n2. Now 🔍 rule from a list below</string>
    <string name="tutorial_on_level_win">2. Rule applied ✅\n3. Continue and win! 👏🏆</string>
    <string name="tutorial_on_level_basic_finished">Nicely done! 🙌\nOnly one last thing to learn...</string>
    <string name="tutorial_on_level_multiselect_expression">🧐 A trickier expression! 🧐</string>
    <string name="tutorial_on_level_multiselect_explanation">≡ \'Multiselect\' button helps you find conversions related to specific parts of the expression. ≡\n</string>
    <string name="tutorial_on_level_multiselect_action">To simplify the expression below go into \'multiselect\' ≡ mode, select both numbers and cancel them out 💥.\n</string>
    <string name="tutorial_on_level_multiselect_details">🎨 In the \'multiselect\' mode background changes color. 🎨\n</string>
    <string name="tutorial_on_level_multiselect_button">Press the \'multiselect\' button at the bottom of the screen</string>
    <string name="tutorial_on_level_multiselect_partial_select">Entered instrument processing.\nSelect 6.</string>
    <string name="tutorial_on_level_multiselect_digit">Now select the other number</string>
    <string name="tutorial_on_level_multiselect_select">Cancel them out!</string>
    <string name="tutorial_on_level_multiselect_click">Correct!\nNow get rid of remaining 0 using multiselect or normal node.</string>
    <string name="tutorial_on_level_seems">Seems you got it all!\n</string>
    <string name="tutorial_on_level_i_am_pro">Yep, now I\'m PRO too 😎</string>
    <string name="tutorial_advanced_proceed">Bring it!</string>
    <string name="no_i_am_pro">No, I\'m PRO 😎</string>
    <string name="parsing_error">parsing error</string>
    <string name="something_went_wrong">Something went wrong, please retry</string>
    <string name="misclick_happened_please_retry">Misclick happened, please retry</string>
    <string name="problems_with_internet_connection">Problems with internet connection</string>
    <string name="bad_credentials_error">Bad credentials error</string>
    <string name="self_phone_mode">You are authorized in self-phone mode</string>
    <string name="google_sign_in_error">Error while sign with Google…</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="steps_count">Steps:</string>
    <string name="multiselection_mode_is_on">Multiselection</string>
    <string name="multiselection_mode_is_off">Usual</string>
    <string-array
        name="languages_array">
        <item>Русский</item>
        <item>English</item>
        <item>@string/coming_soon</item>
    </string-array>
    <string name="level_info_game">Game:</string>
    <string name="info_name"><b>Name:</b> %1$s</string>
    <string name="info_levels_count"><b>Levels:</b> %1$d</string>
    <string name="level_info_level_name">Level:</string>
    <string name="info_game_title">ℹ️ Game info ℹ️</string>
    <string name="level_info_description">Description:</string>
    <string name="level_info_steps">Steps:</string>
    <string name="level_info_select_mode">Select mode:</string>
    <string name="level_info_level_info">ℹ️ Level info ℹ️</string>
    <string name="settings_account">Account</string>
    <string name="settings_edit_account">Edit Account</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_application">Application</string>
    <string name="settings_change_language">Language</string>
    <string name="settings_change_theme">Theme</string>
    <string name="settings_rate_app">Rate app</string>
    <string name="settings_start_tutorial">Start tutorial</string>
    <string name="settings_reset">Reset</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="info_recommended">✓ This game is recommended by MathHelper society ✓</string>
    <string name="connection_alert_text">It seems that there is no internet ☹</string>
    <string name="connect_me_to_internet">Connect me</string>
    <string name="wanna_be_off_the_line">Wanna be offline</string>
</resources>