<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_shape"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attention"
            android:textColor="?attr/errorColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_alert_text"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:typeface="monospace" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:onClick="connectionButtonClick"
        android:tag="connect"
        android:text="@string/connect_me_to_internet"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="21sp"
        android:typeface="monospace" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:onClick="connectionButtonClick"
        android:tag="cancel"
        android:text="@string/wanna_be_off_the_line"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/textColor"
        android:textSize="21sp"
        android:typeface="monospace" />
</LinearLayout>