<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".tutorial.TutorialGamesActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.2" />

        <TextView
            android:id="@+id/games"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.48"
            android:gravity="center"
            android:text="@string/games"
            android:textColor="?attr/textColor"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.12"
            android:gravity="center"
            android:text="@string/gear"
            android:textColor="?attr/textColor"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/alert_shape"
        android:clickable="false"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
        android:drawablePadding="7dp"
        android:fontFamily="monospace"
        android:hint="@string/search_for_a_game"
        android:importantForAutofill="no"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:singleLine="true"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/colorHint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <Button
        android:id="@+id/tutorial_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_game_rect"
        android:onClick="startTutorial"
        android:text="@string/tutorial_game"
        android:textAllCaps="false"
        android:textColor="?attr/textColor"
        android:textSize="21sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/pointer_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:rotation="-45"
        android:text="@string/pointer"
        android:textColor="?attr/textColor"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_game" />
</androidx.constraintlayout.widget.ConstraintLayout>